Existing bin colors

--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -2,6 +2,8 @@
 @blue-light: rgb(153, 192, 253);
 @blue-light-light: rgb(238, 244, 255);
 @blue-transparent: rgba(81, 148, 255, 0.05);
+@existing: rgb(104, 137, 121);
+@existing-light: rgb(235, 240, 238);
 @green: rgb(0, 166, 31);
 @green-light: rgb(0, 166, 31);
 @green-light-light: rgb(179, 228, 189);
