--- a/src/less/curbyourlitter.less
+++ b/src/less/curbyourlitter.less
@@ -1,3 +1,8 @@
 @import "bootstrap";
+@import "can";
 @import "colors";
+@import "icons";
 @import "radio";
+@import "report";
+@import "request";
+@import "variables";
