Fix litter sighting popups

--- a/src/less/request.less
+++ b/src/less/request.less
@@ -72,5 +72,9 @@
 .request-popup {
     .request-icon {
         .icon('bin-request', 35px);
+
+        &-litter-sighting {
+            .icon('litter-sighting', 35px);
+        }
     }
 }
