--- a/src/less/can.less
+++ b/src/less/can.less
@@ -1,4 +1,5 @@
 @import "icons";
+@import "mixins";
 @import "variables";
 
 
@@ -38,11 +39,7 @@
     }
 
     &-header {
-        float: left;
-        font-size: 32px;
-        line-height: 60px;
-        margin-left: 5%;
-        max-width: 70%;
+        .detail-panel-header();
     }
 }
 
