--- a/src/less/report.less
+++ b/src/less/report.less
@@ -1,4 +1,5 @@
 @import "icons";
+@import "mixins";
 @import "variables";
 
 .report-list-item {
@@ -65,10 +66,7 @@
     }
 
     &-header {
-        float: left;
-        font-size: 32px;
-        margin-left: 5%;
-        max-width: 70%;
+        .detail-panel-header();
     }
 }
 
