Make icons bigger

--- a/src/less/can.less
+++ b/src/less/can.less
@@ -31,11 +31,8 @@
     }
 
     &-icon {
-        .icon('existing-bin', 50px);
-        display: inline-block;
-        float: left;
-        max-width: 25%;
-        margin-top: 10px;
+        .icon('existing-bin', 75px);
+        .detail-panel-icon();
     }
 
     &-header {
