--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -2,5 +2,11 @@
     float: left;
     font-size: 24px;
     margin-left: 5%;
-    max-width: 70%;
+    max-width: 50%;
+}
+
+.detail-panel-icon() {
+    display: inline-block;
+    float: left;
+    max-width: 50%;
 }
