--- a/src/less/report.less
+++ b/src/less/report.less
@@ -48,21 +48,19 @@
 
     &-icon {
         &-dirty-conditions {
-            .icon('dirty-conditions', 50px);
+            .icon('dirty-conditions', 100px);
+            height: 75px;
         }
 
         &-overflowing-litter-baskets {
-            .icon('overflowing-litter-baskets', 50px);
+            .icon('overflowing-litter-baskets', 75px);
         }
 
         &-sanitation-condition {
-            .icon('sanitation-condition', 50px);
+            .icon('sanitation-condition', 75px);
         }
 
-        display: inline-block;
-        float: left;
-        max-width: 25%;
-        margin-top: 10px;
+        .detail-panel-icon();
     }
 
     &-header {
