--- a/src/less/request.less
+++ b/src/less/request.less
@@ -50,16 +50,13 @@
     }
 
     &-icon {
-        .icon('bin-request', 50px);
+        .icon('bin-request', 75px);
 
         &-litter-sighting {
-            .icon('litter-sighting', 50px);
+            .icon('litter-sighting', 75px);
         }
 
-        display: inline-block;
-        float: left;
-        margin-top: 10px;
-        max-width: 25%;
+        .detail-panel-icon();
     }
 
     &-header {
