--- a/src/less/can.less
+++ b/src/less/can.less
@@ -7,7 +7,8 @@
     background-color: @existing-light;
     color: @existing;
 
-    &:hover {
+    &:hover,
+    &.hovered-on-map {
         background-color: @existing;
     }
 
