--- a/src/less/report.less
+++ b/src/less/report.less
@@ -6,7 +6,8 @@
     background-color: @blue-transparent;
     color: @blue;
 
-    &:hover {
+    &:hover,
+    &.hovered-on-map {
         background-color: @blue-light;
     }
 
