--- a/src/less/request.less
+++ b/src/less/request.less
@@ -6,7 +6,8 @@
     background-color: @green-transparent;
     color: @green;
 
-    &:hover {
+    &:hover,
+    &.hovered-on-map {
         background-color: @green-light;
     }
 
