--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -4,6 +4,9 @@
 @blue-transparent: rgba(81, 148, 255, 0.05);
 @existing: rgb(104, 137, 121);
 @existing-light: rgb(235, 240, 238);
+@gray-dark: rgb(88, 89, 91);
+@gray-light: rgb(220, 221, 222);
+@gray-medium: rgb(180, 180, 180);
 @green: rgb(0, 166, 31);
 @green-light: rgb(0, 166, 31);
 @green-light-light: rgb(179, 228, 189);
