--- a/src/less/colors.less
+++ b/src/less/colors.less
@@ -10,6 +10,7 @@
 @green: rgb(0, 166, 31);
 @green-light: rgb(0, 166, 31);
 @green-light-light: rgb(179, 228, 189);
+@green-nav: rgb(69, 218, 123);;
 @green-transparent: rgba(0, 166, 31, 0.05);
 @rating-poor: rgb(174, 79, 188);
 @rating-below-average: rgb(83, 67, 237);
