--- a/src/less/can.less
+++ b/src/less/can.less
@@ -24,6 +24,13 @@
     &-type {
         font-size: @list-title-font-size;
     }
+
+    &-location {
+        font-family: @book-font-family;
+        font-size: @list-sub-font-size;
+        letter-spacing: @list-sub-letter-spacing;
+        text-transform: uppercase;
+    }
 }
 
 .detail-panel-can {
