Add installed cans

--- a/src/less/curbyourlitter.less
+++ b/src/less/curbyourlitter.less
@@ -2,6 +2,7 @@
 @import "can";
 @import "colors";
 @import "icons";
+@import "installedcan";
 @import "radio";
 @import "report";
 @import "request";
